Making figure of Landsat footprint

--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,360 +836,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>seed</th>\n",
-       "      <th>importance</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>band</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>shum</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>151.876902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SLOPE</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>147.254245</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>temp</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>146.602009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DEM</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>145.813764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lrad</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>145.796822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_sin_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>143.794542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B7</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>143.285479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_sin_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>141.605280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pres</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>141.393549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_cos_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>140.278105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_sin_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>139.741742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>srad</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>138.570587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>prec</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>138.544292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_sin_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>137.432732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_sin_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>137.120779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_sin_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>134.828282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_cos_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>134.282845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_cos_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>131.484053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_sin_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>131.389800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_sin_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>129.620160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wind</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>128.732413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_cos_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>128.301553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_cos_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>127.714581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_constant</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>126.452422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_constant</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>126.160389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean_NDBI</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>125.852123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_constant</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>125.374231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_sin_3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>124.998577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_cos_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>124.729252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B5</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>123.901976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_cos_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>123.337624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_cos_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>121.209830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>random</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>121.155784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean_EVI</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>120.515630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_cos_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>118.402972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B4</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>118.300316</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B8</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>105.713419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean_NDVI</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>104.936367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>103.538668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B6</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>102.572715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>97.119628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>96.826898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B10</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>96.588560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B11</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>90.592447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDBI_t</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>88.561825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_t</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>86.013757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B6_VCID_2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>84.740469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_t</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>83.832326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B6_VCID_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>76.139191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B9</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>9.027475</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               seed  importance\n",
-       "band                           \n",
-       "shum            4.5  151.876902\n",
-       "SLOPE           4.5  147.254245\n",
-       "temp            4.5  146.602009\n",
-       "DEM             4.5  145.813764\n",
-       "lrad            4.5  145.796822\n",
-       "EVI_sin_1       4.5  143.794542\n",
-       "B7              4.5  143.285479\n",
-       "EVI_sin_2       4.5  141.605280\n",
-       "pres            4.5  141.393549\n",
-       "NDBI_cos_3      4.5  140.278105\n",
-       "NDBI_sin_2      4.5  139.741742\n",
-       "srad            4.5  138.570587\n",
-       "prec            4.5  138.544292\n",
-       "EVI_sin_3       4.5  137.432732\n",
-       "NDBI_sin_3      4.5  137.120779\n",
-       "NDVI_sin_1      4.5  134.828282\n",
-       "EVI_cos_3       4.5  134.282845\n",
-       "NDVI_cos_3      4.5  131.484053\n",
-       "NDVI_sin_2      4.5  131.389800\n",
-       "NDBI_sin_1      4.5  129.620160\n",
-       "wind            4.5  128.732413\n",
-       "NDBI_cos_1      4.5  128.301553\n",
-       "NDBI_cos_2      4.5  127.714581\n",
-       "NDVI_constant   4.5  126.452422\n",
-       "EVI_constant    4.5  126.160389\n",
-       "Mean_NDBI       4.5  125.852123\n",
-       "NDBI_constant   4.5  125.374231\n",
-       "NDVI_sin_3      4.5  124.998577\n",
-       "EVI_cos_2       4.5  124.729252\n",
-       "B5              4.5  123.901976\n",
-       "EVI_cos_1       4.5  123.337624\n",
-       "NDVI_cos_1      4.5  121.209830\n",
-       "random          4.5  121.155784\n",
-       "Mean_EVI        4.5  120.515630\n",
-       "NDVI_cos_2      4.5  118.402972\n",
-       "B4              4.5  118.300316\n",
-       "B8              4.5  105.713419\n",
-       "Mean_NDVI       4.5  104.936367\n",
-       "B3              4.5  103.538668\n",
-       "B6              4.5  102.572715\n",
-       "B1              4.5   97.119628\n",
-       "B2              4.5   96.826898\n",
-       "B10             4.5   96.588560\n",
-       "B11             4.5   90.592447\n",
-       "NDBI_t          4.5   88.561825\n",
-       "NDVI_t          4.5   86.013757\n",
-       "B6_VCID_2       4.5   84.740469\n",
-       "EVI_t           4.5   83.832326\n",
-       "B6_VCID_1       4.5   76.139191\n",
-       "B9              4.5    9.027475"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculaten the average importance of each band so we can have a proper order for figs\n",
     "gourp_mean = Importance_df_single_index.groupby('band').mean().sort_values('importance',ascending=False)\n",
-    "gourp_mean"
+    "gourp_mean.to_csv(r'C:\\Users\\wangj\\Desktop\\New folder\\Landsat_random.csv')"
    ]
   },
   {
