--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_4_Classification_Sentinel_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_4_Classification_Sentinel_random_split_10_layers.ipynb
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,129 +1076,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>seed</th>\n",
-       "      <th>importance</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>band</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Sentinel_B12</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>113.265096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sentinel_B9</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>110.758871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Landsat_B7</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>102.783137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_sin_1</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>101.215081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sentinel_B2</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>99.383538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Landsat_B10</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>54.402808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EVI_t</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>53.917709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NDVI_t</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>51.508903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Landsat_B3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>48.850794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Landsat_B9</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.273474</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>61 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              seed  importance\n",
-       "band                          \n",
-       "Sentinel_B12   4.5  113.265096\n",
-       "Sentinel_B9    4.5  110.758871\n",
-       "Landsat_B7     4.5  102.783137\n",
-       "EVI_sin_1      4.5  101.215081\n",
-       "Sentinel_B2    4.5   99.383538\n",
-       "...            ...         ...\n",
-       "Landsat_B10    4.5   54.402808\n",
-       "EVI_t          4.5   53.917709\n",
-       "NDVI_t         4.5   51.508903\n",
-       "Landsat_B3     4.5   48.850794\n",
-       "Landsat_B9     4.5    4.273474\n",
-       "\n",
-       "[61 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculaten the average importance of each band so we can have a proper order for figs\n",
-    "gourp_mean = Importance_df_single_index.groupby('band').mean().sort_values('importance',ascending=False)\n",
-    "gourp_mean"
+    "gourp_mean = Importance_df_single_index.groupby('band').mean().sort_values('importance',ascending=False)\n"
    ]
   },
   {
