--- a/Process_3_Temporal_Check/Step_1_Iteration_to_erase_unconsistent_pixel.ipynb
+++ b/Process_3_Temporal_Check/Step_1_Iteration_to_erase_unconsistent_pixel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,21 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check length is    ---> 5\n",
-      "Check weights is   ---> [5, 1, 1, 1, 1]\n",
-      "Check threshold is ---> 7\n"
+      "Check length is    ---> 3\n",
+      "Check weights is   ---> [3, 1, 1]\n",
+      "Check threshold is ---> 4\n"
      ]
     }
    ],
    "source": [
-    "Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,5,10).Iterate_the_check()"
+    "Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,3,10).Iterate_the_check()"
    ]
   },
   {
@@ -182,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e563e9008f914a438e311050340dc991",
+       "model_id": "b61b6ef2e17f465eab271f4a72181f3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +204,7 @@
     "Map = geemap.Map()\n",
     "Map.setCenter(115.4508, 35.2492,10)\n",
     "\n",
-    "year_idx = 5\n",
+    "year_idx = 3\n",
     "\n",
     "Map.add_basemap('HYBRID')\n",
     "Map.addLayer(Classified_imgs[year_idx] ,{'min':0,'max':1},'origin')\n",
